--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,48 @@ h4 {
     color: #ffffff;
 }
 
+/*==========================section watch========================*/
+.section-watch {
+    background: url(../img/world-map.png) center no-repeat;
+    background-size: cover;
+}
+
+.section-watch h3,
+.section-watch h4 {
+    color: #484848;
+}
+
+.section-watch .nav-pills {
+    margin-bottom: 45px;
+}
+
+.section-watch .nav-pills .nav-link {
+    font-size: 13px;
+    font-weight: 600;
+    text-transform: uppercase;
+    padding: 14px 30px;
+    color: #484848;
+}
+
+.section-watch .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+    background-color: #f42267;
+    color: #ffffff;
+    box-shadow: 0 4px 16px rgba(0, 0, 0, .35);
+}
+
+.btn-shadow {
+    box-shadow: 0 10px 0 rgba(255, 89, 144, .7);
+    border-radius: 10px;
+    padding: 10px 25px;
+    transition: all .5s;
+}
+
+.btn-shadow:hover {
+    box-shadow: 0 8px 0 rgba(255, 89, 144, .7);
+    color: #ffffff;
+    background-color: #da1757;
+}
+
 /*large Devices, Wide Screen*/
 @media only screen and(max-width: 1200px) {
 
@@ -162,40 +204,74 @@ h4 {
 
 /*mall Devices, Tablets*/
 @media only screen and (max-width: 768px) {
-.main-header-text{
-    left: 0;
-    margin: 0px 0px;
-    max-width: 100%;
-}
+    .main-header-text {
+        left: 0;
+        margin: 0px 0px;
+        max-width: 100%;
+    }
+
     .img-header {
         position: absolute;
         right: 18px;
         width: 50%;
         bottom: 0;
     }
+    section{
+        padding: 50px 0;
+    }
 }
+
 @media only screen and (max-width: 600px) {
-    .main-header-text{
+    .main-header-text {
         top: 90px;
         left: 0;
         margin: 0px 0px;
         max-width: 100%;
     }
-    .main-header-text h3{
+
+    .main-header-text h3 {
         font-size: 30px;
     }
-    .main-header-text h4{
+
+    .main-header-text h4 {
         font-size: 25px;
     }
-    .main-header-buttons .btn{
+
+    .main-header-buttons .btn {
         display: block;
         width: 100%;
         margin-bottom: 15px;
     }
+
     .img-header {
-        position: fixed;
+        position: absolute;
         right: 18px;
-        width: 50%;
+        width: 90%;
         bottom: 0;
+    }
+    .section-watch .nav-pills {
+        margin-bottom: 35px;
+    }
+    .btn-shadow {
+        box-shadow: 0 10px 0 rgba(255, 89, 144, .7);
+        border-radius: 10px;
+        padding: 10px 15px;
+        transition: all .5s;
+    }
+
+}
+
+@media only screen and (max-width: 480px) {
+    .section-watch h3 {
+        font-size: 25px;
+    }
+
+    .section-watch h4 {
+        font-size: 35px;
+    }
+
+    .section-watch .nav-pills .nav-item {
+       width: 100%;
+        text-align: center;
     }
 }
